Fix display issues

--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
 </head>
 <body>
   <div class = "row header">
-    <nav class = "col-1">
+    <div class = "d-block d-lg-none col-12" style = "top: 50vh; position: relative; text-align: center; font-size: 20px;">Mobile site coming soon</div>
+    <nav class = "col-1 d-none d-lg-block">
 
     </nav>
-    <div class = "col-3">
+    <div class = "col-3 d-none d-lg-block">
       <div class = "image">
-        <img class = "card-content" src= "assets\img\main.JPG">
-        <img class = "card-frame" src = "assets\img\Card Template.png">
+        <div class = "card-frame">
+          <img class = "card-frame-img" src = "assets\img\Card Template.png">
+        </div>
         <div class = "card-icon">
           <i class="fas fa-user-secret"></i>
         </div>
@@ -44,7 +46,7 @@
         </div>
       </div>
     </div>
-    <div class = "col-8">
+    <div class = "col-8 d-none d-lg-block">
       <header class = "text-right">
         <h1>Mai Xuan Kim</h1>
         <h2>Developer</h2>
@@ -67,7 +69,7 @@
       </div>
     </div>
   </div>
-  <div class = "row main-content">
+  <div class = "row main-content d-none d-lg-block">
     <div class = "col-4">
       <p></p>
     </div>
@@ -163,7 +165,7 @@
                   <div class = "col-3 icon-container"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg"/></div>
                   <div class = "col-9">
                     <h1 class = "profile-item-name">Java</h1>
-                    <h2 class = "text-justify">
+                    <h2 class = "text-justify profile-item-name">
                       Able to program with Java. Has good grasp of object oriented programming with Java.
                     </h2>
                   </div>
@@ -173,7 +175,7 @@
                   <div class = "col-3 icon-container"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg"/></div>
                   <div class = "col-9">
                     <h1 class = "profile-item-name">C#</h1>
-                    <h2 class = "text-justify">
+                    <h2 class = "text-justify profile-item-name">
                       Able to program a complete windows form application using C#. Has good grasp of object oriented programming with C#.
                     </h2>
                   </div>
@@ -183,7 +185,7 @@
                   <div class = "col-3 icon-container"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"/></div>
                   <div class = "col-9">
                     <h1 class = "profile-item-name">Javascript</h1>
-                    <h2 class = "text-justify">
+                    <h2 class = "text-justify profile-item-name">
                       Able to do programming tasks with Javascript.
                     </h2>
                   </div>
@@ -204,7 +206,7 @@
                   <div class = "col-3 icon-container"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"/></div>
                   <div class = "col-9">
                     <h1 class = "profile-item-name">Github</h1>
-                    <h2 class = "text-justify">
+                    <h2 class = "text-justify profile-item-name">
                       Has had some experience collaborating using Github.
                     </h2>
                   </div>
@@ -214,7 +216,7 @@
                   <div class = "col-3 icon-container"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/gitlab/gitlab-original.svg"/></div>
                   <div class = "col-9">
                     <h1 class = "profile-item-name">Gitlab</h1>
-                    <h2 class = "text-justify">
+                    <h2 class = "text-justify profile-item-name">
                       Has had some experience collaborating using Gitlab.
                     </h2>
                   </div>
@@ -224,7 +226,7 @@
                   <div class = "col-3 icon-container"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/microsoftsqlserver/microsoftsqlserver-plain-wordmark.svg"/></div>
                   <div class = "col-9">
                     <h1 class = "profile-item-name">MS SQL</h1>
-                    <h2 class = "text-justify">
+                    <h2 class = "text-justify profile-item-name">
                       Has had some experience working with Microsoft SQL Server.
                     </h2>
                   </div>
@@ -246,7 +248,7 @@
               <div class = "profile-item-content col-12">
                 <div class = "col-12 profile-item-inner">
                   <div class = "col-12 pt-30">
-                    <h2 class = "text-justify">
+                    <h2 class = "text-justify profile-item-name">
                       I am a backend developer from Hanoi, Vietnam. Java is my primary language, but I am also able to use C# and have
                       some knowledge of Python and Javascript.
                     </h2>
@@ -358,7 +360,7 @@
                 <div class = "profile-item-content col-12">
                   <div class = "col-12 profile-item-inner">
                     <div class = "col-12 pt-30">
-                      <h2 class = "text-justify">
+                      <h2 class = "text-justify profile-item-name">
                         Ever since a young age, I have always aspired to be a software developer. However, life is always full
                         of surprises. I graduated from Hanoi National University of Education and had two successful years as
                         a teacher. But deep down inside, something was calling out to me. But once again, life is full of
@@ -399,7 +401,7 @@
                       <h3 class = "profile-item-name__blue">
                         Language: HTML, CSS, Javascript
                       </h3>
-                      <h4 class = "text-justify">
+                      <h4 class = "text-justify profile-item-name">
                         Rushify is a custom card generator for the popular card game Yu-Gi-Oh! Rush Duel. The user inputs
                         information to be displayed on the card, upon which the website will generate the card image, which
                         the player can then save to their computer. The user can also upload an Excel worksheet with card
@@ -426,7 +428,7 @@
                     <div class = "col-3">
                       <div class = "icon-container">
                         <a href = "https://maikim92.github.io/rushify/" target = "_blank">
-                          <img src = "assets\img\icon1.png">
+                          <img src = "assets\img\icon2.png">
                         </a>
                       </div>
                     </div>
@@ -439,7 +441,7 @@
                       <h3 class = "profile-item-name__blue">
                         Language: C#, SQL
                       </h3>
-                      <h4 class = "text-justify">
+                      <h4 class = "text-justify profile-item-name">
                         HManager is an all-around management solution for clinics and small hospitals. The application has
                         many functions such as patient management, appointment reminder, staff management, bill management,
                         and drug and medicine management.
@@ -484,7 +486,7 @@
       </div>
     </div>
   </div>
-  <nav class = "nav-left">
+  <nav class = "nav-left d-none d-lg-block">
     <a href = "https://join.skype.com/invite/wbIfoZSh1uzs" target = "_blank">
       <div class = "nav-left-item">
         <i class="fab fa-skype"></i>
