--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Profile</title>
+  <title>Mai Kim</title>
   <meta name="description" content="My profile">
   <!--Favicon-->
   <!--<link href="asset/favicon.ico" rel="shortcut icon" type="image/x-icon" />-->
@@ -22,19 +22,267 @@
   <!--Font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
   <!--Icons-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-  <nav id = "navbar-pc" class = "row d-none d-md-block">
-    <div class = "col-1 d-none d-md-block">
+  <div id = "pages" class = "row d-none d-lg-flex">
+    <div class = "col-2">
       <p></p>
     </div>
-    <div class = "col-10 d-none d-md-block">
-      <h1 class = "nav-text">Mai </h1><h1 class = "nav-text-orange">Kim</h1>
+    <div class = "pages col-xs-12 col-lg-8 small">
+      <ul class = "contact-items">
+        <li>
+          <a href = "#">
+            FACEBOOK
+          </a>
+        </li>
+        <li>
+          <a href = "#">
+            SKYPE
+          </a>
+        </li>
+        <li>
+          <a href = "#">
+            LINKEDIN
+          </a>
+        </li>
+      </ul>
     </div>
-  </nav>
+    <div class = "col-2">
+      <p></p>
+    </div>
+  </div>
+  <header id = "header" class = "row">
+    <div class = "col-2 d-none d-lg-block">
+      <p></p>
+    </div>
+    <div id = "logo-container" class = "col-xs-12 col-lg-8">
+      <a href = "index.html">
+        <h2 class = "logo-text">Mai </h2><h2 class = "logo-text-orange">Kim</h2>
+      </a>
+    </div>
+    <div class = "col-2 d-none d-lg-block">
+      <p></p>
+    </div>
+  </header>
+  <div id = "navbar" class = "row">
+    <div class = "col-2 d-none d-lg-block">
+      <p></p>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark col-xs-12 col-lg-8">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <a class="nav-link small active" href="#">
+            <li class="nav-item">
+              ABOUT
+            </li>
+          </a>
+          <a class="nav-link small" href="#">
+            <li class="nav-item">
+              SKILLS
+            </li>
+          </a>
+          <a class="nav-link small" href="projects.html">
+            <li class="nav-item">
+              PROJECTS
+            </li>
+          </a>
+          <a class="nav-link small" href="certificates.html">
+            <li class="nav-item">
+              CERTIFICATES
+            </li>
+          </a>
+          <a class="nav-link small" href="#">
+            <li class="nav-item">
+              COMPANIES
+            </li>
+          </a>
+          <a class="nav-link small" href="#">
+            <li class="nav-item">
+              CONTACTS
+            </li>
+          </a>
+          <a class="nav-link small" href="tags.html">
+            <li class="nav-item">
+              TAGS
+            </li>
+          </a>
+        </ul>
+      </div>
+    </nav>
+    <div class = "col-2 d-none d-lg-block">
+      <p></p>
+    </div>
+  </div>
+  <section id = "main" class = "row">
+    <div class = "col-1 d-none d-lg-block">
+      <p></p>
+    </div>
+    <div class = "col-xs-12 col-lg-10 row">
+      <div class = "col-12 main-content p-40">
+        <div class = "row">
+          <div class = "banner-container">
+
+          </div>
+        </div>
+        <div id = "bio" class = "row">
+          <div class = "col-xs-12 col-md-4">
+            <h5 class = "section-title">Bio</h5>
+            <p class = "section-content">
+              Ever since a young age, Kim has always aspired to be a software developer. However, life is always full of surprises.
+              He graduated from Hanoi National University of Education and had two successful years as a teacher. But deep down inside,
+              something was calling out to him. But once again, life is full of surprises - when he took the developer course at Funix,
+              he knew it was his chance to fulfill his true dreams.
+            </p>
+            <p class = "section-content">
+              After four months of training, using the skills and knowledge accumulated from doing pet projects, Kim was ready to
+              challenge a new realm. And so by October 2021, he became part of over 700 employees at SotaTek to fulfill his childhood dream.
+            </p>
+          </div>
+          <div class = "col-xs-12 col-md-4">
+            <h5 class = "section-title">About</h5>
+            <div class = "section-content">
+              <span class = "title">Date of birth: </span><span>1992-01-09</span><br>
+              <span class = "title">Nationality: </span><span>Vietnamese</span><br>
+              <span class = "title">Location: </span><span>Hanoi, Vietnam</span><br>
+              <span class = "title">Profession: </span><span>Junior backend developer</span><br>
+              <span class = "title">Currently employed at: </span><span>SotaTek JSC.</span><br>
+              <span class = "title">Experience: </span><span>1 year</span><br>
+              <span class = "title">Interests and hobbies: </span><span>Reading, listening to music</span>
+            </div>
+          </div>
+          <div class = "col-xs-12 col-md-4">
+            <div class = "section-content">
+              <a href = "#"><p><i class="fab fa-linkedin title"></i> <span>Linkedin</span></p></a>
+              <a href = "#"><p><i class="fab fa-facebook title"></i> <span>Facebook</span></p></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class = "col-1 d-none d-lg-block">
+      <p></p>
+    </div>
+  </section>
+  <section id = "projects" class = "row">
+    <div class = "col-1 d-none d-lg-block">
+      <p></p>
+    </div>
+    <div class = "col-xs-12 col-lg-10">
+      <div class = "col-12 main-content row">
+        <h5 class = "section-title">Projects</h5>
+        <div class = "col-xs-1 col-md-6 col-lg-3">
+          <div class = "project status-ongoing language-csharp production-casual">
+            <div class = "image-container">
+              <a href = "rushify.html">
+                <img src = "assets/img/rushify.png" id = "prj-img-rushify">
+              </a>
+            </div>
+            <div class = "project-name">
+              <a href = "rushify.html">
+                Cute app makes your cards quickly
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class = "col-xs-1 col-md-6 col-lg-3">
+          <div class = "project status-ongoing language-csharp production-casual">
+            <div class = "image-container">
+              <a href = "reimoo.html">
+                <img src = "assets/img/reimoo.png" id = "prj-img-reimoo">
+              </a>
+            </div>
+            <div class = "project-name">
+              <a href = "reimoo.html">
+                Popular Japanese girl plays with balls
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class = "col-xs-1 col-md-6 col-lg-3">
+          <div class = "project status-ongoing language-csharp production-casual">
+            <div class = "image-container">
+              <a href = "hmanager.html">
+                <img src = "assets/img/hmanager.png" id = "prj-img-hmanager">
+              </a>
+            </div>
+            <div class = "project-name">
+              <a href = "hmanager.html">
+                Powerful assistant helps doctors relieve stress by managing patients
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class = "col-1 d-none d-lg-block">
+      <p></p>
+    </div>
+  </section>
+  <section id = "featured" class = "row">
+    <div class = "col-1 d-none d-lg-block">
+      <p></p>
+    </div>
+    <div class = "col-xs-12 col-lg-10">
+      <div class = "col-12 main-content row">
+        <h5 class = "section-title">Featured in</h5>
+        <div class = "col-xs-1 col-md-6 col-lg-3">
+          <div class = "project status-ongoing language-csharp production-casual">
+            <div class = "image-container">
+              <a href = "https://funix.edu.vn/chan-dung-xter/thay-giao-sinh-chuyen-nghe-it-trong-4-thang/">
+                <img src = "assets/img/me.png">
+              </a>
+            </div>
+            <div class = "project-name">
+              <a href = "https://funix.edu.vn/chan-dung-xter/thay-giao-sinh-chuyen-nghe-it-trong-4-thang/">
+                Funix - Meet the teacher turned developer within 4 months
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class = "col-1 d-none d-lg-block">
+      <p></p>
+    </div>
+  </section>
+  <footer id = "footer" class = "row p-40">
+    <div class = "col-1 d-none d-lg-block">
+      <p></p>
+    </div>
+    <div class = "col-xs-12 col-lg-10 row">
+      <div class = "col-xs-12 col-md-6 col-lg-3">
+        <span class = "title">About</span><br>
+        <a href = "#"><span class = "section-content">Bio</span></a><br>
+        <a href = "#"><span class = "section-content">Skills</span></a><br>
+        <a href = "#"><span class = "section-content">Experience</span></a><br>
+      </div>
+      <div class = "col-xs-12 col-md-6 col-lg-3">
+        <span class = "title">Projects</span><br>
+        <a href = "#"><span class = "section-content">Rushify</span></a><br>
+        <a href = "#"><span class = "section-content">HManager</span></a><br>
+        <a href = "#"><span class = "section-content">Highly Responsive to Sinners</span></a><br>
+      </div>
+      <div class = "col-xs-12 col-md-6 col-lg-3">
+        <span class = "title">Study</span><br>
+        <a href = "#"><span class = "section-content">Backend Developer</span></a><br>
+      </div>
+      <div class = "col-xs-12 col-md-6 col-lg-3">
+        <span class = "title">Contacts</span><br>
+        <a href = "#"><span class = "section-content">Facebook</span></a><br>
+        <a href = "#"><span class = "section-content">Skype</span></a><br>
+        <a href = "#"><span class = "section-content">Linkedin</span></a><br>
+      </div>
+    </div>
+    <div class = "col-1 d-none d-lg-block">
+      <p></p>
+    </div>
+  </footer>
 </body>
 </html>
