--- a/projects.html
+++ b/projects.html
@@ -35,17 +35,17 @@
   <div class = "pages col-xs-12 col-lg-8 small">
     <ul class = "contact-items">
       <li>
-        <a href = "#">
+        <a href = "https://www.facebook.com/profile.php?id=100027007383920" target = "_blank">
           FACEBOOK
         </a>
       </li>
       <li>
-        <a href = "#">
+        <a href = "https://join.skype.com/invite/wbIfoZSh1uzs" target = "_blank">
           SKYPE
         </a>
       </li>
       <li>
-        <a href = "#">
+        <a href = "https://www.linkedin.com/in/kim-mai-xuan-89364924a/" target = "_blank">
           LINKEDIN
         </a>
       </li>
@@ -83,7 +83,7 @@
             ABOUT
           </li>
         </a>
-        <a class="nav-link small" href="#">
+        <a class="nav-link small" href="skills.html">
           <li class="nav-item">
             SKILLS
           </li>
@@ -106,11 +106,6 @@
         <a class="nav-link small" href="#">
           <li class="nav-item">
             CONTACTS
-          </li>
-        </a>
-        <a class="nav-link small" href="tags.html">
-          <li class="nav-item">
-            TAGS
           </li>
         </a>
       </ul>
