--- a/reimoo.html
+++ b/reimoo.html
@@ -35,17 +35,17 @@
   <div class = "pages col-xs-12 col-lg-8 small">
     <ul class = "contact-items">
       <li>
-        <a href = "#">
+        <a href = "https://www.facebook.com/profile.php?id=100027007383920" target = "_blank">
           FACEBOOK
         </a>
       </li>
       <li>
-        <a href = "#">
+        <a href = "https://join.skype.com/invite/wbIfoZSh1uzs" target = "_blank">
           SKYPE
         </a>
       </li>
       <li>
-        <a href = "#">
+        <a href = "https://www.linkedin.com/in/kim-mai-xuan-89364924a/" target = "_blank">
           LINKEDIN
         </a>
       </li>
@@ -83,7 +83,7 @@
             ABOUT
           </li>
         </a>
-        <a class="nav-link small" href="#">
+        <a class="nav-link small" href="skills.html">
           <li class="nav-item">
             SKILLS
           </li>
@@ -106,11 +106,6 @@
         <a class="nav-link small" href="#">
           <li class="nav-item">
             CONTACTS
-          </li>
-        </a>
-        <a class="nav-link small" href="tags.html">
-          <li class="nav-item">
-            TAGS
           </li>
         </a>
       </ul>
@@ -160,20 +155,24 @@
             </div>
           </div>
         </div>
-        <aside id = "recommended" class = "col-4 d-none d-md-block p-40">
-          <div class = "project-name">
-            <h5 class = "section-title">Recommended</h5>
-          </div>
-          <div class = "recommended row">
-            <div class = "image-container col-5">
-              <a href = "hmanager.html">
-                <img src = "assets/img/hmanager.png" id = "prj-img-hmanager">
-              </a>
+        <aside class = "col-4 d-none d-md-block p-40">
+          <h5 class = "section-title">Information</h5>
+          <div class = "section-content">
+            <span class = "title">Started: </span><span>2022</span><br>
+            <span class = "title">Status </span><span>Work in progress</span><br>
+            <span class = "title">Languages: </span><br>
+            <div class="progress">
+              <div class="progress-bar bg-csharp" role="progressbar" aria-label="C#" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <div class = "project-name col-7 project">
-              <a href = "hmanager.html">
-                <span>HManager</span>
-              </a>
+            <div class = "legends row">
+              <div class = "col-4">
+                <div class = "bg-csharp legend d-inline">
+                  <p></p>
+                </div>
+                <div class = "d-inline">
+                  <span class = "title">C# </span><span>100%</span>
+                </div>
+              </div>
             </div>
           </div>
         </aside>
