--- a/rushify.html
+++ b/rushify.html
@@ -35,17 +35,17 @@
   <div class = "pages col-xs-12 col-lg-8 small">
     <ul class = "contact-items">
       <li>
-        <a href = "#">
+        <a href = "https://www.facebook.com/profile.php?id=100027007383920" target = "_blank">
           FACEBOOK
         </a>
       </li>
       <li>
-        <a href = "#">
+        <a href = "https://join.skype.com/invite/wbIfoZSh1uzs" target = "_blank">
           SKYPE
         </a>
       </li>
       <li>
-        <a href = "#">
+        <a href = "https://www.linkedin.com/in/kim-mai-xuan-89364924a/" target = "_blank">
           LINKEDIN
         </a>
       </li>
@@ -83,7 +83,7 @@
             ABOUT
           </li>
         </a>
-        <a class="nav-link small" href="#">
+        <a class="nav-link small" href="skills.html">
           <li class="nav-item">
             SKILLS
           </li>
@@ -108,11 +108,6 @@
             CONTACTS
           </li>
         </a>
-        <a class="nav-link small" href="tags.html">
-          <li class="nav-item">
-            TAGS
-          </li>
-        </a>
       </ul>
     </div>
   </nav>
@@ -132,7 +127,7 @@
         </div>
       </div>
       <div id = "single-project" class = "row">
-        <div class = "col-xs-12 col-md-8">
+        <div class = "col-xs-12 col-md-8 p-40">
           <div class = "image-container">
             <img class="d-block w-100" src="assets/img/rushify.png" alt="Rushify">
           </div>
@@ -162,7 +157,45 @@
             </div>
           </div>
         </div>
-
+        <aside class = "col-4 d-none d-md-block p-40">
+          <h5 class = "section-title">Information</h5>
+          <div class = "section-content">
+            <span class = "title">Started: </span><span>2022</span><br>
+            <span class = "title">Status </span><span>Completed - live</span><br>
+            <span class = "title">Languages: </span><br>
+            <div class="progress">
+              <div class="progress-bar bg-html" role="progressbar" aria-label="HTML" style="width: 43.2%" aria-valuenow="43.2" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-css" role="progressbar" aria-label="CSS" style="width: 16.5%" aria-valuenow="16.5" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-js" role="progressbar" aria-label="Javascript" style="width: 40.3%" aria-valuenow="40.3" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class = "legends row">
+              <div class = "col-4">
+                <div class = "bg-html legend d-inline">
+                  <p></p>
+                </div>
+                <div class = "d-inline">
+                  <span class = "title">HTML </span><span>43.2%</span>
+                </div>
+              </div>
+              <div class = "col-4">
+                <div class = "bg-css legend d-inline">
+                  <p></p>
+                </div>
+                <div class = "d-inline">
+                  <span class = "title">CSS </span><span>16.5%</span>
+                </div>
+              </div>
+              <div class = "col-4">
+                <div class = "bg-js legend d-inline">
+                  <p></p>
+                </div>
+                <div class = "d-inline">
+                  <span class = "title">Javascript </span><span>40.3%</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </aside>
       </div>
     </div>
   </div>
