--- a/certificates.html
+++ b/certificates.html
@@ -35,17 +35,17 @@
   <div class = "pages col-xs-12 col-lg-8 small">
     <ul class = "contact-items">
       <li>
-        <a href = "#">
+        <a href = "https://www.facebook.com/profile.php?id=100027007383920" target = "_blank">
           FACEBOOK
         </a>
       </li>
       <li>
-        <a href = "#">
+        <a href = "https://join.skype.com/invite/wbIfoZSh1uzs" target = "_blank">
           SKYPE
         </a>
       </li>
       <li>
-        <a href = "#">
+        <a href = "https://www.linkedin.com/in/kim-mai-xuan-89364924a/" target = "_blank">
           LINKEDIN
         </a>
       </li>
@@ -83,7 +83,7 @@
             ABOUT
           </li>
         </a>
-        <a class="nav-link small" href="#">
+        <a class="nav-link small" href="skills.html">
           <li class="nav-item">
             SKILLS
           </li>
@@ -108,11 +108,6 @@
             CONTACTS
           </li>
         </a>
-        <a class="nav-link small" href="tags.html">
-          <li class="nav-item">
-            TAGS
-          </li>
-        </a>
       </ul>
     </div>
   </nav>
@@ -120,7 +115,7 @@
     <p></p>
   </div>
 </div>
-<section id = "main" class = "row">
+<section id = "main" class = "row p-40">
   <div class = "col-1 d-none d-lg-block">
     <p></p>
   </div>
@@ -194,7 +189,7 @@
     <p></p>
   </div>
 </section>
-<section id = "featured" class = "row">
+<section id = "featured" class = "row p-40">
   <div class = "col-1 d-none d-lg-block">
     <p></p>
   </div>
