--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
     <div class = "pages col-xs-12 col-lg-8 small">
       <ul class = "contact-items">
         <li>
-          <a href = "#">
+          <a href = "https://www.facebook.com/profile.php?id=100027007383920" target = "_blank">
             FACEBOOK
           </a>
         </li>
         <li>
-          <a href = "#">
+          <a href = "https://join.skype.com/invite/wbIfoZSh1uzs" target = "_blank">
             SKYPE
           </a>
         </li>
         <li>
-          <a href = "#">
+          <a href = "https://www.linkedin.com/in/kim-mai-xuan-89364924a/" target = "_blank">
             LINKEDIN
           </a>
         </li>
@@ -83,7 +83,7 @@
               ABOUT
             </li>
           </a>
-          <a class="nav-link small" href="#">
+          <a class="nav-link small" href="skills.html">
             <li class="nav-item">
               SKILLS
             </li>
@@ -106,11 +106,6 @@
           <a class="nav-link small" href="#">
             <li class="nav-item">
               CONTACTS
-            </li>
-          </a>
-          <a class="nav-link small" href="tags.html">
-            <li class="nav-item">
-              TAGS
             </li>
           </a>
         </ul>
@@ -170,7 +165,38 @@
       <p></p>
     </div>
   </section>
-  <section id = "projects" class = "row">
+  <section id = "tags" class = "row p-40">
+    <div class = "col-1 d-none d-lg-block">
+      <p></p>
+    </div>
+    <div class = "col-xs-12 col-lg-10">
+      <div class = "col-12 main-content row">
+        <h5 class = "section-title">Categories</h5>
+        <div class = "tag-1">
+          <span class = "tag-left">c#</span><span class = "tag-right">2</span>
+        </div>
+        <div class = "tag-1">
+          <span class = "tag-left">java</span><span class = "tag-right">1</span>
+        </div>
+        <div class = "tag-1">
+          <span class = "tag-left">javascript</span><span class = "tag-right">1</span>
+        </div>
+        <div class = "tag-1">
+          <span class = "tag-left">monogame</span><span class = "tag-right">1</span>
+        </div>
+        <div class = "tag-1">
+          <span class = "tag-left">python</span><span class = "tag-right">0</span>
+        </div>
+        <div class = "row">
+          <p></p>
+        </div>
+      </div>
+    </div>
+    <div class = "col-1 d-none d-lg-block">
+      <p></p>
+    </div>
+  </section>
+  <section id = "projects" class = "row p-40">
     <div class = "col-1 d-none d-lg-block">
       <p></p>
     </div>
@@ -225,7 +251,7 @@
       <p></p>
     </div>
   </section>
-  <section id = "featured" class = "row">
+  <section id = "featured" class = "row p-40">
     <div class = "col-1 d-none d-lg-block">
       <p></p>
     </div>
@@ -235,12 +261,12 @@
         <div class = "col-xs-1 col-md-6 col-lg-3">
           <div class = "project status-ongoing language-csharp production-casual">
             <div class = "image-container">
-              <a href = "https://funix.edu.vn/chan-dung-xter/thay-giao-sinh-chuyen-nghe-it-trong-4-thang/">
+              <a href = "https://funix.edu.vn/chan-dung-xter/thay-giao-sinh-chuyen-nghe-it-trong-4-thang/" target = "_blank">
                 <img src = "assets/img/me.png">
               </a>
             </div>
             <div class = "project-name">
-              <a href = "https://funix.edu.vn/chan-dung-xter/thay-giao-sinh-chuyen-nghe-it-trong-4-thang/">
+              <a href = "https://funix.edu.vn/chan-dung-xter/thay-giao-sinh-chuyen-nghe-it-trong-4-thang/" target = "_blank">
                 Funix - Meet the teacher turned developer within 4 months
               </a>
             </div>
