Add new project DomBot

--- a/projects.html
+++ b/projects.html
@@ -168,6 +168,11 @@
               <span>Javascript</span>
             </div>
           </a>
+          <a href = "#">
+            <div class = "sidebar-link" id = "language-python">
+              <span>Python</span>
+            </div>
+          </a>
         </div>
       </div>
       <div id = "status">
@@ -212,16 +217,16 @@
             </div>
           </div>
         </div>
-        <div class = "col-xs-12 col-s-6 col-md-6 col-lg-3 status-ongoing language-csharp production-casual">
+        <div class = "col-xs-12 col-s-6 col-md-6 col-lg-3 status-ongoing language-python production-casual">
           <div class = "project">
             <div class = "image-container">
-              <a href = "reimoo.html">
-                <img src = "assets/img/reimoo.png" id = "prj-img-reimoo">
+              <a href = "dombot.html">
+                <img src = "assets/img/dombot.png" id = "prj-img-dombot">
               </a>
             </div>
             <div class = "project-name">
-              <a href = "reimoo.html">
-                Highly Responsive to Sinners
+              <a href = "dombot.html">
+                DomBot
               </a>
             </div>
           </div>
