--- a/index.html
+++ b/index.html
@@ -182,10 +182,7 @@
           <span class = "tag-left">javascript</span><span class = "tag-right">1</span>
         </div>
         <div class = "tag-1">
-          <span class = "tag-left">monogame</span><span class = "tag-right">1</span>
-        </div>
-        <div class = "tag-1">
-          <span class = "tag-left">python</span><span class = "tag-right">0</span>
+          <span class = "tag-left">python</span><span class = "tag-right">1</span>
         </div>
         <div class = "row">
           <p></p>
@@ -220,13 +217,13 @@
         <div class = "col-xs-1 col-md-6 col-lg-3">
           <div class = "project status-ongoing language-csharp production-casual">
             <div class = "image-container">
-              <a href = "reimoo.html">
-                <img src = "assets/img/reimoo.png" id = "prj-img-reimoo">
+              <a href = "dombot.html">
+                <img src = "assets/img/dombot.png" id = "prj-img-dombot">
               </a>
             </div>
             <div class = "project-name">
-              <a href = "reimoo.html">
-                Highly Responsive to Sinners
+              <a href = "dombot.html">
+                DomBot
               </a>
             </div>
           </div>
