--- a/skills.html
+++ b/skills.html
@@ -140,7 +140,7 @@
                   <span>Experience:</span><br>
                 </div>
                 <div class = "text-right d-inline">
-                  <span class = "title">1 year</span><br>
+                  <span class = "title">2 years</span><br>
                 </div>
               </div>
             </div>
@@ -161,7 +161,7 @@
                   <span>Experience:</span><br>
                 </div>
                 <div class = "text-right d-inline">
-                  <span class = "title">3 months</span><br>
+                  <span class = "title">1 year</span><br>
                 </div>
               </div>
             </div>
@@ -179,7 +179,7 @@
                   <span>Experience:</span><br>
                 </div>
                 <div class = "text-right d-inline">
-                  <span class = "title">3 months</span><br>
+                  <span class = "title">1 month</span><br>
                 </div>
               </div>
             </div>
@@ -287,7 +287,7 @@
                   <span>Experience:</span><br>
                 </div>
                 <div class = "text-right d-inline">
-                  <span class = "title">6 months</span><br>
+                  <span class = "title">2 year</span><br>
                 </div>
               </div>
             </div>
@@ -305,7 +305,7 @@
                   <span>Experience:</span><br>
                 </div>
                 <div class = "text-right d-inline">
-                  <span class = "title">3 months</span><br>
+                  <span class = "title">9 months</span><br>
                 </div>
               </div>
             </div>
@@ -318,24 +318,6 @@
             </div>
             <div class = "col-8 row section-content">
               <h5 class = "section-title orange">PostgreSQL</h5>
-              <div class = "small d-inline">
-                <div class = "d-inline col-8">
-                  <span>Experience:</span><br>
-                </div>
-                <div class = "text-right d-inline">
-                  <span class = "title">3 months</span><br>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class = "col-xs-12 col-s-6 col-md-6 col-lg-6 col-xl-3">
-          <div class = "skill row">
-            <div class = "col-4 icon-container">
-              <img class = "icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/MonoGame_Logo.svg/1038px-MonoGame_Logo.svg.png"/>
-            </div>
-            <div class = "col-8 row section-content">
-              <h5 class = "section-title orange">Monogame</h5>
               <div class = "small d-inline">
                 <div class = "d-inline col-8">
                   <span>Experience:</span><br>
@@ -377,7 +359,7 @@
                   <span>Experience:</span><br>
                 </div>
                 <div class = "text-right d-inline">
-                  <span class = "title">1 year</span><br>
+                  <span class = "title">2 year</span><br>
                 </div>
               </div>
             </div>
@@ -395,7 +377,25 @@
                   <span>Experience:</span><br>
                 </div>
                 <div class = "text-right d-inline">
-                  <span class = "title">6 months</span><br>
+                  <span class = "title">1 year</span><br>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class = "col-xs-12 col-s-6 col-md-6 col-lg-6 col-xl-3">
+          <div class = "skill row">
+            <div class = "col-4 icon-container">
+              <img src="https://storage.googleapis.com/replit/images/1666890925161_06809f3811c0ee977e88c2a4cd4a412a.png" />
+            </div>
+            <div class = "col-8 row section-content">
+              <h5 class = "section-title orange">Repl.it</h5>
+              <div class = "small d-inline">
+                <div class = "d-inline col-8">
+                  <span>Experience:</span><br>
+                </div>
+                <div class = "text-right d-inline">
+                  <span class = "title">1 month</span><br>
                 </div>
               </div>
             </div>
